Live temperature charts

--- a/client/src/assets/i18n/en.json
+++ b/client/src/assets/i18n/en.json
@@ -4,7 +4,9 @@
   },
   "ruuviTags": {
     "chart": {
-      "averageTemperature": "Average temperature"
+      "averageTemperature": "Average temperature",
+      "temperature": "Temperature",
+      "all": "All"
     },
     "tagSelect": {
       "timeAgo": "{{ time }} ago",
